# plugins

./: CMakeLists.txt  README  readme.txt
data/: CMakeLists.txt  c_flag_overrides.cmake  resource.h  resource.rc.in
examples/: InputBox.nsi  about.nsi  colordlg.nsi  drivesdlg.nsi  folderdlg.nsi  fontdlg.nsi  open.nsi  save.nsi  ver.nsi
po/: CMakeLists.txt  es.po
src/: CMakeLists.txt  Dialogs.c  Dialogs.h  callbacks.c  callbacks.h  config.h.in  plugin.c
